z-index fix

--- a/src/app/components/ProgressBar/ProgressBar.scss
+++ b/src/app/components/ProgressBar/ProgressBar.scss
@@ -8,7 +8,7 @@
     height: 6px;
     top: 120px;
     left: 0;
-    z-index: 0;
+    z-index: 4;
     background-color: $white;
     border: none;
     -webkit-appearance: none;
