--- a/src/app/components/SubpageHeader/SubpageHeader.scss
+++ b/src/app/components/SubpageHeader/SubpageHeader.scss
@@ -9,8 +9,8 @@
           position: absolute;
           margin-top: 100px;
           font-size: 60px;
-          // z-index: 12;
           text-transform: uppercase;
+          z-index: 0;
     }
     .background-green {
         width: 100%;
