--- a/src/app/pages/Contact/Contact.scss
+++ b/src/app/pages/Contact/Contact.scss
@@ -19,7 +19,6 @@
 margin-top: 100px;
 color: #000;
 font-size: 60px;
-z-index: 12;
 text-transform: uppercase;
     }
     .contact-content {
